gateway/ingress-nginx-service.yaml
# Ingress Controller 자체를 외부에서 접근할 수 있게 30080 포트 노출
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
