gateway/gateway-ingress.yaml
# 인그레스 규칙
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  # Ingress를 Nginx Ingress Controller가 감지하게 하는 설정
    # kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.7.0/deploy/static/provider/cloud/deploy.yaml 설치 필요
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: api.example.com  # 사용자가 접속할 때 api.example.com 이라는 주소로 요청이 들어올 때만 이 규칙이 작동
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-gateway  # 쿠버네티스 안에 있는 nginx-gateway 서비스로 연결
                port:
                  number: 80
